<resources>
    <string name="app_name">SOSial</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="about_popup">About</string>
    <string name="title_activity_login">SOSial</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Sign up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="username">User Name</string>
    <string name="title_activity_member">Family</string>
    <string name="add_member">Add Member</string>
    <string name="remove_member">Remove Member</string>
    <string name="trigger">Trigger</string>
    <string name="open_trigger">SOS</string>
    <string name="messaging">Messaging</string>
    <string name="enter_message">Enter Message</string>
    <string name="to">To</string>
    <string name="send">send</string>
    <string name="title_activity_messaging">Message</string>
    <string name="action_send">Send</string>
    <string name="inbox">Inbox</string>
    <string name="title_activity_inbox">Inbox</string>
    <string name="title_activity_view_message">ViewMessage</string>
    <string name="sign_up">Sign Up</string>
    <string name="sosial">SOSial</string>
    <string name="family">Family</string>
    <string name="shared_locations">Shared Locations</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="account">Account</string>
    <string name="title_activity_view_profile">My Profile</string>
    <string name="profile_name_title">Name</string>
    <string name="profile_email_title">E-mail</string>
    <string name="profile_number_title">Mobile Number</string>
    <string name="members_list">Members List</string>
    <string name="add_members_title">Add Member</string>
    <string name="title_activity_shared_locations">SharedLocations</string>
    <string name="app_version">Version 0.1.0</string>
    <string name="end_process">End Processes</string>
    <string name="about_us">SOSial is a service designed to assist people communicate and receive critical information before and during times of emergencies as well as disaster. The main differentiating factor about SOSial is that it is designed to work even without cellular network and internet services which are often unavailable during natural disasters.</string>
    <string name="createdby">Created By\nSarathkrishnan Ramesh, Shivesh Khaitan, Shrijit Singh</string>
</resources>
