<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/popup_background"
    android:orientation="vertical"
    tools:context=".PopupActivity">
    <TextView
        android:id="@+id/popup_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="50sp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_marginTop="60dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/app_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_version"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:layout_marginTop="20dp"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/createdBy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:textSize="10sp"
        android:text="@string/createdby"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textStyle="italic" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">


        <TextView
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:fontFamily="sans-serif"
            android:maxLines="12"
            android:text="@string/about_us"
            android:textColor="@android:color/white" />
    </ScrollView>
</LinearLayout>

