<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ViewProfileActivity"
    tools:showIn="@layout/activity_view_profile">

    <LinearLayout
        android:id="@+id/profileLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mymap"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            tools:context=".MapsActivity" />


        <TextView
            android:id="@+id/profileNameTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_name_title"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:textColor="@android:color/black"
            android:textSize="35sp"/>

        <TextView
            android:id="@+id/profileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/profileEmailTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_email_title"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:textColor="@android:color/black"
            android:layout_marginRight="20dp"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/profileEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/profileNumberTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_number_title"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@android:color/black"
            android:layout_marginTop="40dp"
            android:textSize="35sp"/>

        <TextView
            android:id="@+id/profileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/viewFamily"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/rounded_button"
            android:text="Family Members"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>